welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: '=>' expected but ':' found.
      case 1:   setCouleurBrosse(Color.yellow);
            ^MethodsPicture:31: error: '=>' expected but ':' found.
      case 2:   setCouleurBrosse(Color.blue);
            ^MethodsPicture:32: error: '=>' expected but ':' found.
      case 3:   setCouleurBrosse(Color.red);
            ^MethodsPicture:33: error: '=>' expected but ':' found.
      case 4:   setCouleurBrosse(Color.green);
            ^