welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV(){
  gauche();
  baisseBrosse();
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  avance();
  gauche();
}

def faireMotif()
{
  
  for(compt <- 1 to 4)
  {
    avance()
    avance();
    faireV();
    i match {
      case 1:   setCouleurBrosse(Color.yellow);
      case 2:   setCouleurBrosse(Color.blue);
      case 3:   setCouleurBrosse(Color.red);
      case 4:   setCouleurBrosse(Color.green);
    }
  }
}
override def run() {
  for(i <- 1 to 3)
  {
    for(j <-1 to 3)
    {
      faireMotif();
      avance();
      avance();
      avance();
      avance();
      avance();
      avance();
      avance();
    }
  }
}